--- a/Site/css/footer.css
+++ b/Site/css/footer.css
@@ -1,24 +1,30 @@
 @media (min-width: 1280px){
   footer.footer {
       margin-top: 2rem;
+      background-color: #444444;
   }
   footer.footer div.logo-footer{
       text-align: center;
   }
 
     footer.footer div.logo-footer img{
-        width: 7vw;
+        width: 6vw;
         height: 11vh;
+        margin-top: 1.2rem;
     }
 
     footer.footer div.logo-footer p{
         font-family: 'Montserrat', sans-serif;
         font-size: 0.8rem;
+        color: white;
+        margin-bottom: 0;
+        padding-bottom: 1.2rem;
     }
 }
 @media (max-width: 1280px){
     footer.footer {
         margin-top: 2rem;
+        background-color: #444444;
     }
     footer.footer div.logo-footer{
         text-align: center;
@@ -27,11 +33,15 @@
     footer.footer div.logo-footer img{
         width: 20vw;
         height: 10vh;
+        margin-top: 1.2rem;
     }
 
     footer.footer div.logo-footer p{
         font-family: 'Montserrat', sans-serif;
         font-size: 0.8rem;
+        margin-bottom: 0;
+        padding-bottom: 1.2rem;
+        color: white;
     }
 }
 
